--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>odin-recipes</h1>
+        <h1>Odins Rezepte</h1>
         <a href="recipes/lasagne.html">Lasagne</a>
     </body>
 
