Lasagnen Bild eingefügt und Lasagnen Seite fertig erstellt

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -7,6 +7,42 @@
 
     <body>
         <h1>Lasagne</h1>
+        <p> <img src="/img/Lasagne.jpg" alt="Bild der fertigen Lasagne" height="48" width="48"> </p>
+        <p> Diese leckere Rote-Linsen-Lasagne ist vollgepackt mit leckeren Zutaten.</p>
+        <p> Sie ist total einfach zu machen, herrlich aromatisch, gesund und super sättigend </p>
+        <h2> Zutaten </h2>
+        <ul>
+            <li>200g Rote Linsen</li>
+            <li>1 Zwiebel</li>
+            <li>2 Knoblauchzehen</li>
+            <li>2 mittelgroße Möhren</li>
+            <li>2 EL Olivenöl</li>
+            <li>600ml Gemüsebrühe</li>
+            <li>500ml passierte Tomaten</li>
+            <li>Salz und Pfeffer</li>
+            <li>1 EL italienische Kräuter</li>
+            <li>12 Lasagneplatten</li>
+            <li>200g Craime Frech</li>
+            <li>100g geriebener Mozzarella</li>
+        </ul>
+
+        <h2>Zubereitung</h2>
+        <ol>
+            <li><p>Linsen in ein Sieb geben und gründlich abspülen. Zwiebeln und Knoblauch klein</p>
+            <p>hacken. Die Möhre schälen und in ganz kleine Würfel schneiden, alternativ raspeln.</p></li>
+            <li><p>Öl in einer Pfanne erhitzen und Zwiebeln, Knoblauch und Möhren 2 min andünsten</p>
+            <p>Linsen und Gemüsebrühe zugeben, aufkochen und mit geschlossenen Deckel</p>
+            <p> bei mittlerer Hitze etwa 10 - 15 min köcheln lassen. Passierte Tomaten</p>
+            <p>und Kräuter unterheben und alles mit Salz und Pfeffer abschmecken</p></li>
+            <li><p>Backofen auf 200°C Ober- Unterhitze vorheizen.</p></li>
+            <li><p>Eine Auflaufform mit Butter einfetten, dann eine Schicht Tomaten-Linsensauce</p>
+            <p>hineingeben und mit Lasagneplatten bedecken. Weiter schichten, bis alle Zutaten</p>
+            <p>aufgebraucht sind. Die oberste Schicht ist die Tomaten-Linsensauce.</p></li>
+            <li><p>Creme fraiche mit 3 EL Wasser verrühren und über der Lasagne verstreichen. Alles</p>
+            <p>mit geriebenen Käse bedecken und 30 min backen</p></li>
+        </ol>
+
+
     </body>
 
 </html>
