Link zum Bild richtig gestellt und Größe angepasst
../img stat ./img um in das verzeichniss img zu kommen
und die größe so angepast, dass das Bild gut sichtbar ist

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Lasagne</h1>
-        <p> <img src="/img/Lasagne.jpg" alt="Bild der fertigen Lasagne" height="48" width="48"> </p>
+        <p> <img src="../img/Lasagne.jpg" alt="Bild der fertigen Lasagne" height="500" width="350"> </p>
         <p> Diese leckere Rote-Linsen-Lasagne ist vollgepackt mit leckeren Zutaten.</p>
         <p> Sie ist total einfach zu machen, herrlich aromatisch, gesund und super sättigend </p>
         <h2> Zutaten </h2>
